<resources>
    <string name="app_name">Listology</string>
    <string name="save">Save</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="event_name">Event Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="addItem">+</string>
    <string name="textview">TextView</string>
    <string name="newTask">New Task</string>
    <string name="calendar">CALENDAR</string>
    <string name="fix_me">Fix Me</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="task_detail">Task Detail</string>


</resources>
