<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191D1A"
    tools:context="fi.kaiyu.listology2.Add_Reminder">

    <Button
<<<<<<< HEAD
        android:id="@+id/etSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
=======
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginBottom="74dp"
>>>>>>> 08026e8dc2426bfa6ce458b7ae4d4f3162e26493
        android:background="@drawable/btn_rounded"
        android:onClick="insertIntoDatabase"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
<<<<<<< HEAD
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.175" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/btn_rounded"
        android:onClick="insertIntoDatabase"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPickTime" />

    <Button
        android:id="@+id/etPickDate"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/pick_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShowDate" />

    <Button
        android:id="@+id/etPickTime"
        android:layout_width="229dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/pick_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShowTime" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/etShowDate"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
=======
        app:layout_constraintEnd_toEndOf="@+id/pickTime"
        app:layout_constraintStart_toStartOf="@+id/showTime"
        app:layout_constraintTop_toBottomOf="@+id/pickTime" />

    <Button
        android:id="@+id/pickDate"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginBottom="43dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/pick_date"
        app:layout_constraintBottom_toTopOf="@+id/showTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDate" />

    <Button
        android:id="@+id/pickTime"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/pick_time"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTime" />

    <EditText
        android:id="@+id/eventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/holo_green_dark"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintBottom_toTopOf="@+id/showDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/showDate"
        android:layout_width="204dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
>>>>>>> 08026e8dc2426bfa6ce458b7ae4d4f3162e26493
        android:hint="@string/date"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:textSize="18sp"
<<<<<<< HEAD
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEventName" />

    <TextView
        android:id="@+id/etShowTime"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
=======
        app:layout_constraintBottom_toTopOf="@+id/pickDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <TextView
        android:id="@+id/showTime"
        android:layout_width="204dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
>>>>>>> 08026e8dc2426bfa6ce458b7ae4d4f3162e26493
        android:hint="@string/time"
        android:textColor="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:textSize="18sp"
<<<<<<< HEAD
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPickDate" />
=======
        app:layout_constraintBottom_toTopOf="@+id/pickTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickDate" />
>>>>>>> 08026e8dc2426bfa6ce458b7ae4d4f3162e26493
</androidx.constraintlayout.widget.ConstraintLayout>